2003-11-13  Andras Varga

	* Checked in parallel simulation code that was developed March-May 2003,
	during my stay at Monash University. Changes:

	2003-05-12  Andras Varga
	* speedmtr.cc: changed so that if measurement interval (clocks) or
	number of events are small, it refuses to give results (ie. returns
	all zeroes). I had some weird readings other before that...

	2003-04-18  Andras Varga
	* omnetapp.cc: fname-append-host setting now also appends pid (process
	id) to the file names

	2003-03-31  Andras Varga
	* omnetapp.cc/h: parallel simulation ini file options changed.
	New options, with their default values:
          [General]
          scheduler-class="cSequentialScheduler" (only used when par-sim=false)
          parallel-simulation=false
          parsim-communications-class="cFileCommunications"
          parsim-syncronization-class= "cNullMessageProtocol"
	Old, obsoleted options:
	  [General]
	  distributed=...
	  parallel-system=...

	2003-03-23  Andras Varga
	* omnetapp.cc: install scheduler into 'simulation' object on startup --
	see comments in include/ChangeLog about cScheduler

2003-11-09  Andras Varga

	* omnetapp.cc: added support for dynamic loading of NED files.
	The new [General]/preload-nedfiles= omnetpp.ini entry may contain
	a list of NED file names, separated by spaces. The NED files will
	be loaded before the user interface is started.

2003-10-02  Andras Varga

	* cenvir.cc, omnetapp.h: added new method cEnvir::moduleMethodCalled(),
	needed for animation of method calls between modules

2003-09-22  Andras Varga

	* omnetapp.cc, cenvir.cc: messageSent() signature change, see
	include/ChangeLog

2003-06-16  ------ omnetpp-2.3 released ------

2003-03-15  ------ omnetpp-2.3b2 released ------

2003-03-15  Andras Varga

	* cinifile.cc/h: bugfix: complained about unterminated last line

2003-03-04  Andras Varga

	* cinifile.cc/h: made it faster to process large ini files (added
	haswildcard field)
