@@ -1,3 +1,15 @@
+2004-01-01  Andras Varga
+
+	* omnetapp.cc/h, cenvir.cc: handle new cEnvir notifications: 
+	moduleCreated(), moduleDeleted(), connectionCreated(), 
+	connectionRemoved(), displayStringChanged(cGate*), 
+	displayStringChanged(cModule*),	displayStringAsParentChanged()
+
+2003-12-11  Andras Varga
+
+	* all files: follow changes in sim/; C-style casts replaced with 
+	static_cast<>
+
 2003-11-13  Andras Varga
 
 	* Checked in parallel simulation code that was developed March-May 2003,
